# job_board

./: .pre-commit-config.yaml  pyproject.toml
src/job_board/: manage.py
src/job_board/core/: forms.py  models.py  storage.py  urls.py  views.py
src/job_board/core/bussiness_logic/: exeptions.py
src/job_board/core/migrations/: 0001_initial.py  0002_add_competence.py  0003_add_employment_format.py  0004_add_user_status.py  0005_add_genders.py  0006_add_response_statuses.py  0007_add_skills.py  0008_add_user_roles_permission.py  0008_alter_users_photo_alter_users_resume.py  0009_alter_companies_logo.py  0009_reviewsscore_review_reviewsscore_user.py  0010_alter_reviewsscore_review_alter_reviewsscore_user.py  0010_rename_vacancycounties_vacancycountries.py  0011_alter_emailconfirmationcodes_table.py  0012_alter_companies_description_and_more.py  0013_users_name_users_surname.py  0014_employees_name_employees_surname.py
src/job_board/core/models/: __init__.py  addresses.py  business_lines.py  cities.py  companies.py  companies_business_lines.py  competencies.py  countries.py  email_confirmation_codes.py  employees.py  employees_positions.py  employment_format.py  genders.py  language_skills.py  languages.py  positions.py  profiles.py  response_statuses.py  responses.py  reviews.py  reviews_score.py  skills.py  staff_number.py  tags.py  user_language_skills.py  user_statuses.py  users.py  users_tags.py  vacancy.py  vacancy_countries.py  vacancy_tags.py  work_formats.py
src/job_board/core/presentation/: converters.py  (+2 more)
src/job_board/job_board/: settings.py  urls.py
(+63 files in other folders)
